Updates sourceRef for podinfo

--- a/clusters/core/podinfo/podinfo-kustomization.yaml
+++ b/clusters/core/podinfo/podinfo-kustomization.yaml
@@ -11,6 +11,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: podinfo
+    namespace: flux-system
   targetNamespace: default
   patches:
     - patch: |-
