--- a/clusters/core/podinfo/kustomization.yaml
+++ b/clusters/core/podinfo/kustomization.yaml
@@ -4,3 +4,15 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - helm-release.yaml
+spec:
+  patches:
+    - patch: |-
+        apiVersion: autoscaling/v2beta2
+        kind: HorizontalPodAutoscaler
+        metadata:
+          name: podinfo
+        spec:
+          minReplicas: 3
+      target:
+        name: podinfo
+        kind: HorizontalPodAutoscaler
