--- a/clusters/core/podinfo/helm-release.yaml
+++ b/clusters/core/podinfo/helm-release.yaml
@@ -4,3 +4,15 @@ kind: HelmRelease
 metadata:
   name: podinfo
   namespace: podinfo
+spec:
+  patches:
+    - patch: |-
+        apiVersion: autoscaling/v2beta2
+        kind: HorizontalPodAutoscaler
+        metadata:
+          name: podinfo
+        spec:
+          minReplicas: 3
+      target:
+        name: podinfo
+        kind: HorizontalPodAutoscaler
