--- a/clusters/core/metallb-system/kustomization.yaml
+++ b/clusters/core/metallb-system/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - helm-release.yaml
-  - services/dashboard-loadbalancer.yaml
+  # - services/dashboard-loadbalancer.yaml
