--- a/clusters/core/kube-dashboard/aio.yaml
+++ b/clusters/core/kube-dashboard/aio.yaml
@@ -23,6 +23,14 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  name: admin-user
+  namespace: kubernetes-dashboard
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
