--- a/clusters/core/kube-dashboard/aio.yaml
+++ b/clusters/core/kube-dashboard/aio.yaml
@@ -20,6 +20,21 @@ metadata:
 
 ---
 
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: admin-user
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: admin-user
+  namespace: kubernetes-dashboard
+
+---
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
