Fixes directory for apps

--- a/clusters/main/apps.yaml
+++ b/clusters/main/apps.yaml
@@ -10,7 +10,7 @@ spec:
     - name: charts
     - name: config
     - name: core
-  path: ./cluster/apps
+  path: ./clusters/apps
   prune: true
   sourceRef:
     kind: GitRepository
