Clusters -> Cluster, adds talos setup

--- a/cluster/main/apps.yaml
+++ b/cluster/main/apps.yaml
@@ -10,7 +10,7 @@ spec:
     - name: charts
     - name: config
     - name: core
-  path: ./clusters/apps
+  path: ./cluster/apps
   prune: true
   sourceRef:
     kind: GitRepository
