--- a/cluster/main/charts.yaml
+++ b/cluster/main/charts.yaml
@@ -2,14 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: core
+  name: charts
   namespace: flux-system
 spec:
   interval: 10m
-  dependsOn:
-    - name: charts
-  path: ./clusters/core
-  prune: true
+  path: ./cluster/helm-charts
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
