--- a/cluster/main/core.yaml
+++ b/cluster/main/core.yaml
@@ -2,12 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: crds
+  name: core
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./clusters/crds
-  prune: false
+  dependsOn:
+    - name: charts
+  path: ./cluster/core
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
