--- a/cluster/main/crds.yaml
+++ b/cluster/main/crds.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: charts
+  name: crds
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./clusters/helm-charts
+  path: ./cluster/crds
   prune: false
   sourceRef:
     kind: GitRepository
