--- a/cluster/main/flux-system/gotk-sync.yaml
+++ b/cluster/main/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/jaybyrrd/fleet-infra
+  url: ssh://git@github.com/jaybyrrd/k8s-homelab
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/main
+  path: ./cluster/main
   prune: true
   sourceRef:
     kind: GitRepository
